syntax = "proto3";

package cache;

option java_package = "com.example.cache.proto";
option java_outer_classname = "CacheProto";
option java_multiple_files = true;

// Version represents a distributed version for conflict resolution
message Version {
  int64 timestamp = 1;      // Timestamp in milliseconds since epoch
  string node_id = 2;       // Unique identifier of the node that created this version
}

// CacheEntry represents a single cache entry with metadata
message CacheEntry {
  bytes data = 1;           // Serialized value data
  int64 created_at = 2;     // Timestamp when entry was created (milliseconds since epoch)
  int64 expires_at = 3;     // Timestamp when entry expires (0 = never expires)
  Version version = 4;      // Distributed version for conflict resolution (timestamp + nodeId)
}

// GetRequest represents a cache get operation
message GetRequest {
  string key = 1;           // Cache key to retrieve
}

// GetResponse represents the result of a get operation
message GetResponse {
  enum Status {
    HIT = 0;                // Key found in cache
    MISS = 1;               // Key not found or expired
    ERROR = 2;              // Error occurred
  }

  Status status = 1;        // Result status
  CacheEntry entry = 2;     // Cache entry (only present if status = HIT)
  string error_message = 3; // Error message (only present if status = ERROR)
}

// PutRequest represents a cache put operation
message PutRequest {
  string key = 1;           // Cache key
  CacheEntry entry = 2;     // Cache entry to store
}

// PutResponse represents the result of a put operation
message PutResponse {
  enum Status {
    SUCCESS = 0;            // Entry stored successfully
    ERROR = 1;              // Error occurred
  }

  Status status = 1;        // Result status
  string error_message = 2; // Error message (only present if status = ERROR)
}

// DeleteRequest represents a cache delete operation
message DeleteRequest {
  string key = 1;           // Cache key to delete
}

// DeleteResponse represents the result of a delete operation
message DeleteResponse {
  enum Status {
    SUCCESS = 0;            // Entry deleted successfully
    ERROR = 1;              // Error occurred
  }

  Status status = 1;        // Result status
  string error_message = 2; // Error message (only present if status = ERROR)
}

// ========================================
// Gossip Protocol Messages (SWIM-based)
// ========================================

// NodeStatus represents the status of a node in the cluster
enum NodeStatus {
  ALIVE = 0;                // Node is alive and responsive
  SUSPECTED = 1;            // Node is suspected of failure
  DOWN = 2;                 // Node is confirmed down
  LEAVING = 3;              // Node is gracefully leaving
  LEFT = 4;                 // Node has left the cluster
}

// NodeInfo represents information about a cluster node
message NodeInfo {
  string id = 1;            // Unique node identifier
  string address = 2;       // IP address or hostname
  int32 port = 3;           // Port number
  NodeStatus status = 4;    // Current node status
  int64 incarnation = 5;    // Incarnation number for refuting suspicions
  int64 timestamp = 6;      // Last update timestamp (milliseconds since epoch)
}

// GossipMessage represents all gossip protocol messages
message GossipMessage {
  enum MessageType {
    PING = 0;               // Heartbeat ping
    ACK = 1;                // Acknowledgment of ping
    PING_REQ = 2;           // Indirect ping request
    SUSPECT = 3;            // Report node as suspected
    ALIVE = 4;              // Refute suspicion or announce alive
    CONFIRM = 5;            // Confirm node failure
    JOIN = 6;               // Request to join cluster
    JOIN_RESPONSE = 7;      // Response to join request
    LEAVE = 8;              // Announce graceful departure
    SYNC = 9;               // Full state synchronization
  }

  MessageType type = 1;     // Type of gossip message
  NodeInfo sender = 2;      // Information about the sending node
  NodeInfo subject = 3;     // Information about the subject node (for SUSPECT, ALIVE, etc.)
  repeated NodeInfo members = 4; // List of known members (for JOIN_RESPONSE, SYNC)
  int64 sequence_number = 5; // Sequence number for ordering
  bytes payload = 6;        // Optional additional payload
}

// GossipRequest wraps gossip messages for request-response communication
message GossipRequest {
  GossipMessage message = 1; // The gossip message
}

// GossipResponse wraps gossip messages for responses
message GossipResponse {
  enum Status {
    SUCCESS = 0;            // Operation successful
    ERROR = 1;              // Error occurred
    REJECTED = 2;           // Request rejected
  }

  Status status = 1;        // Response status
  GossipMessage message = 2; // The response gossip message
  string error_message = 3; // Error message (only present if status = ERROR)
}
